[package]
name = "bevy_viewcube"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.14"
bevy_editor_pls = "*"
bevy_mod_picking = "*"
bevy_mod_outline = "0.8"
bevy_panorbit_camera = "0.19.1"


[profile.dev.package."*"]
opt-level = 3