[package]
name = "my_bevy_game"
version = "0.1.0"
edition = "2021"


[dependencies]
bevy =  { version = "0.14.1", features = ["multi_threaded"] }
bevy_panorbit_camera = "0.19.1"
bevy_rapier3d = "*"
bevy_stl = "0.14.0"
bevy_web_asset = "0.9.0"
rand = "0.8.5"
rand_chacha = "0.3.1"
wasm-bindgen = "0.2.93"

futures = "0.3.29"
web-sys = { version = "0.3.70", features = ["WebSocket", "ReadableStream", "ReadableStreamDefaultReader", "console"] }
wasm-bindgen-futures = "0.4.43"
js-sys = "0.3.70"


[target.wasm32-unknown-unknown]
runner = "wasm-server-runner"

[profile.dev]
debug = 0
strip = "debuginfo"
opt-level = 0 # Switch to 1 for more runtime performance
# overflow-checks = false # Uncomment for better math performance

[profile.dev.package."*"]
opt-level = 2

[features]
dev = ["bevy/dynamic_linking", "bevy/file_watcher", "bevy/asset_processor"]
