[package]
name = "rob_network"
version.workspace = true
edition.workspace = true
authors.workspace = true
keywords.workspace = true
license.workspace = true

[dependencies]
bevy = {workspace = true}

web-sys = { version = "0.3.70", features = ["ReadableStream", "ReadableStreamDefaultReader", "console"] }
js-sys = "0.3.70"
bevy_extern_events = {path = "../../../bevy_extern_events/"}
serde_json = "1.0.125"
wasm-bindgen = "0.2.93"
wasm-bindgen-futures = "0.4.43"
